分流部署/test-tool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: ready-live
  labels:
    server: test
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      server: test
      app: test
  template:
    metadata:
      name: test
      labels:
        server: test
        app: test
    spec:
      containers:
      - name: test
        image: test:v02
        ports:
        - containerPort: 80

#
#apiVersion: v1
#kind: Service
#metadata:
#  name: test
#spec:
#  type: NodePort
#  selector:
#    server: test
#  ports:
#  - name: test
#    port: 80
#    targetPort: 80
#    protocol: TCP
#    nodePort: 30092
