分流部署/svc-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-all
  namespace: ready-live
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30099
