分流部署/test-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-v1
  namespace: ready-live
  labels:
    server: http-v1
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      server: http-v1
      app: web
  template:
    metadata:
      name: http-v1
      labels:
        server: http-v1
        app: web
    spec:
      containers:
      - name: http-v1
        image: test:v01
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: http-v1
  namespace: ready-live
spec:
  type: NodePort
  selector:
    server: http-v1
  ports:
  - name: http  
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30090
