分流部署/test-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-v2
  namespace: ready-live
  labels:
    server: http-v2
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      server: http-v2
      app: web
  template:
    metadata:
      name: http-v2
      labels:
        server: http-v2
        app: web
    spec:
      containers:
      - name: http-v2
        image: test:v02
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: http-v2
  namespace: ready-live
spec:
  type: NodePort
  selector:
    server: http-v2
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30092
