分流部署/virtual-service-hpa.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-test-svc
  namespace: ready-live
spec:
  hosts:
    - http-all
  http:
  - route:
    - destination:
        host: http-v1
        
      weight: 85
    - destination:
        host: http-v2
        
      weight: 15
